--- a/flask-06-Phonebook-Application/phonebook.yml
+++ b/flask-06-Phonebook-Application/phonebook.yml
@@ -53,12 +53,12 @@ Resources:
       AllocatedStorage: 20
       DBInstanceClass: db.t2.micro
       DBInstanceIdentifier: phonebook
-      DBSecurityGroups: 
-        - !Ref MySecGrp
       Engine: MySQL
       EngineVersion: "8.0.28"
       MasterUserPassword: clarusway_1234
       MasterUsername: admin
+      VPCSecurityGroups:
+        - !Ref MySecGrp
 
   MyScalingPolicy:
     Type: AWS::AutoScaling::ScalingPolicy
@@ -117,20 +117,17 @@ Resources:
         InstanceType: !Ref MyInstanceType
         KeyName: !Ref MyKeyPair
         SecurityGroupIds:
-          - !GetAtt MySecGrp.GroupId # !Ref MySecGrp
+          - !GetAtt MySecGrp.GroupId # !Ref MySecGrp   
         UserData: !Base64 |
           #! /bin/bash
           sudo yum update -y
           sudo yum install python3 -y
-          sudo yum install python3-pip -y
           sudo pip3 install flask
-          sudo pip install Flask-MySQL
-          sudo pip install Flask pip
-          sudo yum install git -y
+          sudo pip3 install flask_mysql
           sudo yum install wget -y
           cd /home/ec2-user
-          RDS_ENDPOINT=$(aws ssm get-parameter --name "/phonebook/rds-endpoint" --query "Parameter.Value" --output text)
-          echo "$RDS_ENDPOINT" > dbserver.endpoint
+          RDS_ENDPOINT=$(aws rds describ-db-instance --query "DBInstances[0].Endpoint.Address" --output text)
+          echo "$RDS_ENDPOINT" > /home/ec2-user/dbserver.endpoint
           wget -P templates https://raw.githubusercontent.com/Mecit-tuksoy/Flask/main/flask-06-Phonebook-Application/templates/index.html
           wget -P templates https://raw.githubusercontent.com/Mecit-tuksoy/Flask/main/flask-06-Phonebook-Application/templates/add-update.html
           wget -P templates https://raw.githubusercontent.com/Mecit-tuksoy/Flask/main/flask-06-Phonebook-Application/templates/delete.html
@@ -174,6 +171,7 @@ Resources:
           CidrIp: 0.0.0.0/0
       VpcId: !Ref MyVPC
   
+
 Outputs:
   DNSofELB:
     Description: Gives DNS of ELB
