--- a/flask-06-simple-phonebook-app/phonebook-app-yaml.yaml
+++ b/flask-06-simple-phonebook-app/phonebook-app-yaml.yaml
@@ -83,8 +83,8 @@ Resources:
                 echo "${MyDBURI}" > /home/ec2-user/dbserver.endpoint
                 TOKEN="xxxxxxxxxxxxxxxxx"
                 cd /home/ec2-user
-                git clone https://$TOKEN@github.com/Mecit-tuksoy/Flask.git
-                python3 /home/ec2-user/Flask/flask-06-simple-phonebook-app/phonebook-app.py
+                git clone https://$TOKEN@github.com/Mecit-tuksoy/Python-Flask.git
+                python3 /home/ec2-user/Python-Flask/flask-06-simple-phonebook-app/phonebook-app.py
               - MyDBURI: !GetAtt DBInstance.Endpoint.Address
 
   TG:
