--- a/flask-07-secure-phonebook-app/phonebook-app.yml
+++ b/flask-07-secure-phonebook-app/phonebook-app.yml
@@ -92,8 +92,8 @@ Resources:
                 echo "${MyDBURI}" > /home/ec2-user/dbserver.endpoint
                 TOKEN=$(aws --region=us-east-1 ssm get-parameter --name /mecit/phonebook/token --with-decryption --query 'Parameter.Value' --output text)
                 cd /home/ec2-user
-                git clone https://$TOKEN@github.com/Mecit-tuksoy/Flask.git
-                python3 /home/ec2-user/Flask/flsk-07-secure-phonebook-app/phonebook-app.py
+                git clone https://$TOKEN@github.com/Mecit-tuksoy/Python-Flask.git
+                python3 /home/ec2-user/Python-Flask/flask-07-secure-phonebook-app/phonebook-app.py
               - MyDBURI: !GetAtt DBInstance.Endpoint.Address
               
   TG:
